--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,56 +102,24 @@ p {
 }
 
 /* Below changes the margin bottom, and text color for the classes "benefit-lead", "benefit-brand", and "benefit-cost" */
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
 /* Below changes the bottom margin, and text align for the h3 element inside the classes "benefit-lead", "benefit-brand", "benefit-cost" */
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-
- .benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-
+.benefit-lead h3,
+.benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-} 
+}
 
 /* Below changes display to block, margin, and max width for the "img" element inside the classes "benfit-lead", "benefit-brand", and "benefit-c0st" */
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
     display: block;
     margin: 10px auto;
@@ -159,26 +127,8 @@ p {
 }
 
 /* Below changes margin bottom, padding, height, font, background color and text color the classes "search-engine-optimization", "online-reputation-management", and "social-media-marketing" */
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-
+.search-engine-optimization,
+.online-reputation-management,
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -189,33 +139,15 @@ p {
 }
 
 /* Below changes the maximum height for the "img" element inside the classes "search-engine-optimization", "online-reputation-management", and "social-media-marketing" */
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
 
 /* Below changes margin bottom and font size for h2 element inside the classes "search-engine-optimization", "online-reputation-management", and "social-media-marketing" */
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
